--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.15",
@@ -46,16 +47,19 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
